# grafana-snapshots-tool

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  HISTORY.md  HISTORY.rst  MANIFEST.in  README.md  TODO.md  local_cli.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  t.py  tt.json
grafana_snapshots/: __init__.py  cli.py  constants.py  grafana.py  grafanaData.py  jsonConfig.py
grafana_snapshots/conf/: grafana-snapshots.json  grafana-snapshots.yml
grafana_snapshots/dataresults/: __init__.py  dataresults.py  resultsBase.py  resultsFrame.py  resultsGraphite.py  resultsInfluxDB.py  resultsMatrix.py  resultsSQL.py  resultsStream.py
grafana_snapshots/dataresults/panels/: __init__.py  default.py  dispatcher.py  graph.py  stat.py  table.py  timeseries.py
grafana_snapshots/datasources/: __init__.py
test/: conftest.py  test_1.py  test_get_snapshotData_g7_prom.py  test_get_snapshotData_g9_graphite.py  test_get_snapshotData_g9_influxdb.py  test_get_snapshotData_g9_loki.py  test_get_snapshotData_g9_mysql.py  test_get_snapshotData_g9_prom.py  test_getdata.py  test_request.py
test/conf/panels/grafana_7/: stat_graph_up.json  stat_instant.json  timeseries.json
test/conf/panels/grafana_9/: bargauge_std.json  flux_timeseries_5m.json  flux_timeseries_novar_5m.json  influxQL_timeseries_vars_range.json  loki_timeseries_vars_range.json  mysql_table_transformation.json  stat_range.json  table_overwrite.json  timeseries.json  timeseries_instant.json  timeseries_overwrites.json
test/conf/queries/grafana_9/graphite/: data_range_5m.json
test/conf/queries/grafana_9/influxdb/: flux_two_timeseries_tags_range_5m.json  influxQL_timeseries_tags_range_5m.json  influxQL_two_timeseries_range_5m.json  inflxQL_table_instant.json  v1_timeseries_range_5m.json  v1_two_timeseries_range_5m.json
test/conf/queries/grafana_9/mysql/: table_timeless_2_queries_raw.json
test/conf/queries/grafana_9/prometheus/: table_range_2m.json  timeseries_instant.json  timeseries_range.json  two_timeseries_5m.json
tests/: conftest.py  test_get_snapshotData_g10_prom.py  test_get_snapshotData_g7_prom.py  test_get_snapshotData_g9_graphite.py  test_get_snapshotData_g9_influxdb.py  test_get_snapshotData_g9_loki.py  test_get_snapshotData_g9_mysql.py  test_get_snapshotData_g9_prom.py  test_getdata.py  test_request.py
tests/conf/: datasources.json
tests/conf/panels/grafana_10/: stat_range_up.json
tests/conf/panels/grafana_7/: graph_simple.json
tests/conf/panels/grafana_9/: barchart.json  gauge_std.json  graphite_timeseries_vars_range.json  piechart.json  stat_range_specific_field.json
tests/conf/queries/grafana_10/prometheus/: timeseries_range.json
tests/conf/queries/grafana_7/elasticsearch/: metrics_15m
tests/conf/queries/grafana_7/prometheus/: timeseries_5m.json
tests/conf/queries/grafana_9/influxdb/: influxQL_timeseries_range_5m.json  influxQL_timeseries_tags_range_5m.json
tests/conf/queries/grafana_9/loki/: timeseries_range_5m.json
tests/conf/queries/grafana_9/mysql/: table_timeless_transf_filter.json
tests/conf/queries/grafana_9/prometheus/: table_instant.json
