[metadata]
name = grafana-snapshots
version = 0.3.0
friendly_name = Grafana Snapshots Tools
description = A client library for accessing the Grafana HTTP API, written in Python
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0 license 
license_file = LICENSE
author = Jean-Francois Pik
author_email = jfpik78@gmail.com
maintainer = peekjef72
maintainer_email = jfpik78@gmail.com
copyright = Copyright 2020-2025 Jean-Francois Pik <jfpik78@gmail.com>
url = https://github.com/grafana-toolbox/grafana-snapshots-tool
project_urls =
    Source = https://github.com/grafana-toolbox/grafana-snapshots-tool
    Tracker = https://github.com/grafana-toolbox/grafana-snapshots-tool/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Information Technology
    Intended Audience :: Manufacturing
    Intended Audience :: Science/Research
    Intended Audience :: System Administrators
    Intended Audience :: Telecommunications Industry
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Communications
    Topic :: Database
    Topic :: Internet
    Topic :: Internet :: WWW/HTTP
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Human Machine Interfaces
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Archiving
    Topic :: System :: Networking :: Monitoring
    Topic :: Utilities
    Operating System :: MacOS
    Operating System :: OS Independent
    Operating System :: POSIX
    Operating System :: Unix
keywords = grafana http api grafana-client grafana-api http-client grafana-utils grafana-automation grafana-toolbox grafana-snapshots

[options]
use_scm_version = True
python_requires = >=3.7
packages = find:
include_package_data = True
zip_safe = False
setup_requires =
    setuptools-scm<9

# https://setuptools.pypa.io/en/latest/userguide/dependency_management.html#platform-specific-dependencies
install_requires =
    grafana_client
    Jinja2
    python_dateutil
    PyYAML>=6.0
    verlib2
    niquests>=3.4.0,<4
    importlib-metadata;python_version<='3.7'
    verlib2==0.2.0

[options.entry_points]
console_scripts =
    grafana-snapshots = grafana_snapshots.cli:main

[options.extras_require]
test =
    parameterized>=0.8,<1
    codecov<3
    coverage[toml]<8
    unittest-xml-reporting<4
    requests-mock<2

develop =
    build<2
    poethepoet<1
    pip-review<2  # Use `pip-review --local --interactive` to upgrade outdated packages.
    twine<7


[options.packages.find]
where = .
exclude = test

[tool.setuptools_scm]
# local_scheme = no-local-version
# version_scheme = python-simplified-semver
# write_to = grafana_snapshots/version.py

# [coverage:run]
# omit =
#     # omit anything generated / mirror to sync code
#     grafana_client/elements/_async